Prevent mobile viewing and add indicator if browser height is too small

--- a/css/googlemap.css
+++ b/css/googlemap.css
@@ -32,6 +32,9 @@ body {
 	background: #1C3664;
 	color: #FFF;
 }
+#ui uiContent {
+	overflow: hidden;
+}
 #ui h1 {
 	margin-top: .5em;
 }
@@ -79,4 +82,22 @@ body > #hqInfo {
 }
 #journey h3 {
 	margin-bottom: .25em;
+}
+
+/* browser height indicator */
+#browserHeightIndicator {
+	bottom: 0; left: 50%;
+	width: 300px;
+	position: absolute;
+	display: none;
+	margin-left: -150px;
+	padding: 0 10px;
+	background: #FFF;
+	border-radius: 5px 5px 0 0;
+	box-shadow: 1px 1px 5px #333;
+}
+#browserHeightIndicator p {
+	color: #333;
+	font-size: 10px;
+	text-align: center;
 }
